CAMBIOS A QUE QUEDE FUNCIONANDO EL MOSTRAR LA IMAGEN EN EL CHAT CAMBIOS PARA QUE FUNCIONE EL LOGIN Y EL REGISTRO

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ChatWebMySql</string>
+    <string name="app_name">Chat Live4Teach</string>
     <string name="register">Registrarse</string>
     <string name="forgot">Olvidaste tu contraseña?</string>
     <string name="login_now">Ingresar aqui</string>
@@ -30,5 +30,5 @@
      Teléfono: + 571-78508229 \n
      Correo electrónico: prueba.correo7521@gmail.com \n
      Dirección: Calle 100 # 8a 55 (226025)</string>
-    <string name="URL_ENVIAR_MENSAJE">http://192.168.0.11/webdyb/loginapp/insertarMensaje.php</string>
+    <string name="URL_SERVER">http://192.168.0.11/webdyb/loginapp/insertarMensaje.php</string>
 </resources>
