Corregido Emojis, listo para integracion con FirebaseDatabase y FirebaseStorage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,8 @@
      Teléfono: + 571-78508229 \n
      Correo electrónico: prueba.correo7521@gmail.com \n
      Dirección: Calle 100 # 8a 55 (226025)</string>
-    <string name="URL_SERVER">http://192.168.0.11/webdyb/loginapp/insertarMensaje.php</string>
+    <string name="URL_SERVER">http://192.168.0.13/webdyb/loginapp/insertarMensaje.php</string>
+
+    <string name="select_picture_title">Obtener Foto De</string>
+
 </resources>
